--- a/src/app/components/directives/agenda/eventCard.html
+++ b/src/app/components/directives/agenda/eventCard.html
@@ -17,8 +17,8 @@
         <div class="card-content" style="height:48px;">&nbsp; {{event.participants.teamHome.label}} <br/> &nbsp;
             {{event.participants.teamVisitor.label}}
         </div>
-        <div class="card-content"><small>{{event.startDate}}</small>
-            <a ng-show="mapShow" class="waves-effect waves-light {{textColor1}} right" ng-click="openMap()">
+        <div class="card-content light-text-color">&nbsp; <small>{{event.startDate}}</small>
+            <a ng-show="mapShow" class="waves-effect waves-light accent-text-color right" ng-click="openMap()">
                 <i class="material-icons">location_on</i>
             </a>
             <span ng-if="hasCompare" ng-show="isCollected" class="right">&nbsp;
@@ -36,14 +36,14 @@
 <!-- Modal map Player -->
 <div ng-attr-id="modalEvent-{{event._id}}" class="modal modal-fixed-footer">
     <div class="modal-content">
-        <div class="colorMain-text"><i class="material-icons">location_on</i>
+        <div class="primary-text-color"><i class="material-icons">location_on</i>
             {{event.address.formatedAddress}}
         </div>
         <br>
         <div ng-attr-id="mapEvent-{{event._id}}" style="width:100%;height:90%;"></div>
     </div>
     <div class="modal-footer center-align">
-        <a href="" class="modal-action modal-close waves-effect waves-light btn colorAccent"
+        <a href="" class="modal-action modal-close waves-effect waves-light btn accent-color"
            translate="commons.buttons.close"></a>
     </div>
 </div>
