--- a/src/app/modules/commons/users/password/pwdUpdate.html
+++ b/src/app/modules/commons/users/password/pwdUpdate.html
@@ -4,21 +4,17 @@
     <div class="row"></div>
 
     <!-- Entete -->
-    <div class="row">
-        <div class="col s12">
-            <div class="row colorMain white-text center">
-                <div class="col m3 s12 center">
-                    <avatar person="user" width="'100px'"></avatar>
-                </div>
-                <div class="col m7 s12">
-                    <br/>
-                    <h4>{{user.firstname}} {{user.name}}</h4>
-                    <h5 ng-bind="user.account.login"></h5>
-                </div>
-                <div class="col m2 s12">
-                    <br/>&nbsp;
-                </div>
-            </div>
+    <div class="row light-primary-color center valign-wrapper hide-on-med-and-down">
+        <div class="col m1">
+            <i class="material-icons md-48 accent-text-color ">https</i>
+        </div>
+        <div class="col m9 left-align">
+            <h5 translate="profilePwdPage.title"></h5>
+        </div>
+
+        <div class="col m2">
+            <button class="btn accent-color right" ng-click="doTheBack()"
+                    translate="commons.buttons.back"></button>
         </div>
     </div>
 
@@ -50,12 +46,12 @@
                     </div>
 
                     <div class="col s12 m4 input-field">
-                        <input id="passwordConfirm" name="passwordConfirm" type="password" class="validate" ng-model="passwdConfirm" required passwd-check="password" tabindex="2">
                         <label for="passwordConfirm">
                             {{'profilePwdPage.form.label.passwordConfirm' | translate }} 
-                            <span class="colorAccent-text">*</span>
+                            <span class="accent-text-color">*</span>
                         </label>
-                        <span ng-show="pwdForm.passwordConfirm.$dirty && pwdForm.passwordConfirm.$error.pwmatch" class="small colorAccent-text" translate="profilePwdPage.form.messageControl.password.different"></span>
+                        <input id="passwordConfirm" name="passwordConfirm" type="password" class="validate" ng-model="passwdConfirm" required passwd-check="password" tabindex="2">
+                        <span ng-show="pwdForm.passwordConfirm.$dirty && pwdForm.passwordConfirm.$error.pwmatch" class="small accent-text-color" translate="profilePwdPage.form.messageControl.password.different"></span>
                         
                     </div>
                     <div class="col m2 hide-on-small">&nbsp;</div>
@@ -99,12 +95,10 @@
                 <!-- actions buttons -->
                 <div class="row">
                     <div class="col s12 center-align">
-                        <button ng-click="resetPwdUser()"
-                           class="btn colorAccent white-text waves-effect waves-light center"
-                           translate="commons.buttons.cancel"></button>
+                        
                         <button type="submit" ng-disabled="pwdForm.$invalid" translate="commons.buttons.validate"
                                 ng-class="{'btn waves-effect waves-white disabled': pwdForm.$invalid, 
-                                           'btn waves-effect waves-white colorSecondary': !pwdForm.$invalid}" tabindex="4">
+                                           'btn waves-effect waves-white accent-color': !pwdForm.$invalid}" tabindex="4">
                         </button>
                     </div>
                 </div>
