--- a/src/app/modules/commons/users/profile/writeProfile.html
+++ b/src/app/modules/commons/users/profile/writeProfile.html
@@ -4,22 +4,17 @@
     <div class="row"></div>
 
     <!-- Entete -->
-    <div class="row">
-        <div class="col s12">
-            <div class="row colorMain white-text center">
-                <div class="col m3 s12 center">
-                    <avatar person="user" width="'100px'" collection="User"></avatar>
-                    <span class="small" translate="profilePage.form.label.avatar"></span>
-                </div>
-                <div class="col m7 s12">
-                    <br/>
-                    <h4>{{user.firstname}} {{user.name}}</h4>
-                    <h5>{{user.account.login}}</h5>
-                </div>
-                <div class="col m2 s12">
-                    <br/>&nbsp;
-                </div>
-            </div>
+    <div class="row light-primary-color center valign-wrapper hide-on-med-and-down">
+        <div class="col m1">
+            <i class="material-icons md-48 accent-text-color ">account_box</i>
+        </div>
+        <div class="col m9 left-align">
+            <h5 translate="profilePage.title"></h5>
+        </div>
+
+        <div class="col m2">
+            <button class="btn accent-color right" ng-click="doTheBack()"
+                    translate="commons.buttons.back"></button>
         </div>
     </div>
 
@@ -48,7 +43,7 @@
                         <div class="row hide-on-med-and-up">
                             <div class="col s12 input-field">
                                 <label for="email">{{'profilePage.form.label.email' | translate }} <span
-                                        class="colorAccent-text">*</span></label>
+                                        class="accent-text-color">*</span></label>
                                 <input type="email" id="email" name="email"
                                        ng-pattern="/^[a-z]+[a-z0-9._]+@[a-z]+\.[a-z.]{2,5}$/"
                                        class="validate"
@@ -56,7 +51,7 @@
                                        ng-class="{ 'invalid': profileForm.email.$invalid }"/>
 
                                 <span ng-class="{'has-error': profileForm.email.$dirty && profileForm.email.$error.required}"
-                                      ng-hide="profileForm.email.$valid" class="small colorAccent-text"
+                                      ng-hide="profileForm.email.$valid" class="small accent-text-color"
                                       translate="profilePage.form.messageControl.emailDirty"></span>
                             </div>
                         </div>
@@ -65,7 +60,7 @@
                         <div class="row" id="rowGender">
                             <div class="input-field col s3">
                                 <label>{{'profilePage.form.label.gender.title' | translate }} <span
-                                        class="colorAccent-text">*</span></label>
+                                        class="accent-text-color">*</span></label>
                             </div>
                             <div class="input-field col s9 center-align">
                                 <input name="user.gender" class="with-gap" type="radio" id="userGenderF"
@@ -76,7 +71,7 @@
                                        value="gender.male" ng-model="user.gender" required/>
                                 <label for="userGenderM">{{'profilePage.form.label.gender.male' | translate }}</label>
                             </div>
-                            <span class="small colorAccent-text"
+                            <span class="small accent-text-color"
                                   ng-show="profileForm.gender.$invalid && !profileForm.gender.$pristine"
                                   translate="profilePage.form.messageControl.gender"></span>
                         </div>
@@ -85,13 +80,13 @@
                         <div class="row">
                             <div class="col s12 input-field">
                                 <label for="userFirstname">{{'profilePage.form.label.firstname' | translate }} <span
-                                        class="colorAccent-text">*</span></label>
+                                        class="accent-text-color">*</span></label>
                                 <input ng-model="user.firstname" id="userFirstname" name="userFirstname" type="text"
                                        class="validate" required ng-pattern="'[a-zA-ZÀÁÂÃÄÅàáâãäåÒÓÔÕÖØòóôõöøÈÉÊËèéêëÇçÌÍÎÏìíîïÙÚÛÜùúûüÿÑñ -]+'">
-                                <span class="small colorAccent-text"
+                                <span class="small accent-text-color"
                                       ng-show="profileForm.userFirstname.$invalid && !profileForm.userFirstname.$pristine"
                                       translate="profilePage.form.messageControl.firstname"></span>
-                                <span class="small colorAccent-text invalid"
+                                <span class="small accent-text-color invalid"
                                       ng-if="profileForm.userFirstname.$error.pattern"
                                       translate="signupStartPage.form.messageControl.badchars"></span>
                             </div>
@@ -101,14 +96,14 @@
                         <div class="row">
                             <div class="col s12 input-field">
                                 <label for="userName">{{'profilePage.form.label.name' | translate }} <span
-                                        class="colorAccent-text">*</span></label>
+                                        class="accent-text-color">*</span></label>
                                 <input ng-model="user.name" id="userName" name="userName" type="text" class="validate"
                                        required ng-pattern="'[a-zA-ZÀÁÂÃÄÅàáâãäåÒÓÔÕÖØòóôõöøÈÉÊËèéêëÇçÌÍÎÏìíîïÙÚÛÜùúûüÿÑñ -]+'"
                                        ng-class="{ 'has-error' : profileForm.userName.$invalid && !profileForm.userName.$pristine }">
-                                <span class="small colorAccent-text"
+                                <span class="small accent-text-color"
                                       ng-show="profileForm.userName.$invalid && !profileForm.userName.$pristine"
                                       translate="profilePage.form.messageControl.name"></span>
-                                <span class="small colorAccent-text invalid"
+                                <span class="small accent-text-color invalid"
                                       ng-if="profileForm.userFirstname.$error.pattern"
                                       translate="signupStartPage.form.messageControl.badchars"></span>
                             </div>
@@ -124,7 +119,7 @@
                         <div class="row hide-on-small-only">
                             <div class="col s12 input-field">
                                 <label for="email"> {{'profilePage.form.label.email' | translate }} <span
-                                        class="colorAccent-text">*</span></label>
+                                        class="accent-text-color">*</span></label>
                                 <input type="email" id="email" name="email"
                                        ng-pattern="/^[a-z]+[a-z0-9._]+@[a-z]+\.[a-z.]{2,5}$/"
                                        class="validate"
@@ -132,7 +127,7 @@
                                        ng-class="{ 'invalid': profileForm.email.$invalid }"/>
 
                                 <span ng-class="{'has-error': profileForm.email.$dirty && profileForm.email.$error.required}"
-                                      ng-hide="profileForm.email.$valid" class="small colorAccent-text"
+                                      ng-hide="profileForm.email.$valid" class="small accent-text-color"
                                       translate="profilePage.form.messageControl.emailDirty"></span>
                             </div>
                         </div>
@@ -141,16 +136,16 @@
                         <div class="row" id="rowBirthdate">
                             <div class="col s12 input-field">
                                 <label for="profilBirthdate">{{'profilePage.form.label.birthdate' | translate }} <span
-                                        class="colorAccent-text">*</span></label>
+                                        class="accent-text-color">*</span></label>
                                 <input id="profilBirthdate" name="profilBirthdate" type="text" class="datepicker"
                                        ng-model="user.birthdate" required
                                        age-check min-age="{{16}}"
                                        ng-class="{ 'has-error' : profileForm.profilBirthdate.$invalid && !profileForm.profilBirthdate.$pristine }"/>
-                                <span class="small colorAccent-text"
+                                <span class="small accent-text-color"
                                       ng-if="profileForm.profilBirthdate.$error.required && !profileForm.profilBirthdate.$pristine"
                                       translate="profilePage.form.messageControl.birthDate">
 		                        </span>
-                                <span class="small colorAccent-text"
+                                <span class="small accent-text-color"
                                       ng-if="profileForm.profilBirthdate.$error.ageCheck && !profileForm.profilBirthdate.$pristine"
                                       translate="profilePage.form.messageControl.ageCheck">
 		                        </span>
@@ -171,11 +166,11 @@
                         <div class="row">
                             <div class="col s12 input-field">
                                 <i class="material-icons prefix">phone</i>
-                                <label for="userPhoneHome"><span class="colorAccent-text">*</span></label>
+                                <label for="userPhoneHome"><span class="accent-text-color">*</span></label>
                                 <input id="userPhoneHome" name="userPhoneHome" type="text"
                                        ui-mask="{{'commons.format.phone.pattern' | translate }}" class="validate"
                                        min="0" ng-model="user.contact.home" required>
-                                <span class="small colorAccent-text"
+                                <span class="small accent-text-color"
                                       ng-show="profileForm.userPhoneHome.$invalid && !profileForm.userPhoneHome.$pristine"
                                       translate="profilePage.form.messageControl.phone">
 		                        </span>
@@ -190,12 +185,11 @@
                 <!-- actions buttons -->
                 <div class="row">
                     <div class="col s12 center-align">
-                        <button class="waves-effect waves-white btn btn-s colorAccent" ng-click="doTheBack()"
-                                translate="commons.buttons.cancel"></button>
+                        
                         <button type="submit" ng-disabled="profileForm.$invalid" translate="commons.buttons.validate"
                                 ng-click="updateProfilUser()"
-                                ng-class="{'btn btn-s waves-effect waves-white disabled': profileForm.$invalid, 
-                                           'btn btn-s waves-effect waves-white colorSecondary': !profileForm.$invalid}">
+                                ng-class="{'btn waves-effect waves-white disabled': profileForm.$invalid, 
+                                           'btn waves-effect waves-white accent-color': !profileForm.$invalid}">
 
                         </button>
                     </div>
