--- a/src/app/modules/commons/users/sandbox/switchSandbox.html
+++ b/src/app/modules/commons/users/sandbox/switchSandbox.html
@@ -4,21 +4,17 @@
     <div class="row"></div>
 
     <!-- Entete -->
-    <div class="row">
-        <div class="col s12">
-            <div class="row colorMain white-text center">
-                <div class="col m3 s12 center">
-                    <avatar person="user" width="'100px'"></avatar>
-                </div>
-                <div class="col m7 s12">
-                    <br/>
-                    <h4>{{user.firstname}} {{user.name}}</h4>
-                    <h5 ng-bind="user.account.login"></h5>
-                </div>
-                <div class="col m2 s12">
-                    <br/>&nbsp;
-                </div>
-            </div>
+    <div class="row light-primary-color center valign-wrapper hide-on-med-and-down">
+        <div class="col m1">
+            <i class="material-icons md-48 accent-text-color ">group</i>
+        </div>
+        <div class="col m9 left-align">
+            <h5 translate="switchSandbox.title"></h5>
+        </div>
+
+        <div class="col m2">
+            <button class="btn accent-color right" ng-click="doTheBack()"
+                    translate="commons.buttons.back"></button>
         </div>
     </div>
 
@@ -30,7 +26,7 @@
     
     <div class="row center-align">
         <div class="col s12">
-            <button class="btn colorAccent white-text" ng-click="doTheBack()">
+            <button class="btn accent-color" ng-click="doTheBack()">
                 {{'commons.buttons.back' | translate }}
             </button>
         </div>
